# zcalc

./: .clang-format  .gitignore  CMakeLists.txt
cas/: CMakeLists.txt  bytecode.cpp  bytecode.h  cas.cpp  cas.h  example.cas  ratio_eq.cpp  ratio_eq.h
src/: CMakeLists.txt  comms.gatt  keypad.cpp  keypad.h  main.cpp  maths.cpp  maths.h  screen.h  u8g2_rp2040_hal.cpp  u8g2_rp2040_hal.h  wireless.cpp  wireless.h
src/screens/: calculator.cpp  calculator.h  menu.cpp  menu.h  rateqsol.cpp  rateqsol.h  scanner.cpp  scanner.h  text_field.cpp  text_field.h
tests/: CMakeLists.txt  math.cpp
